--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ h2{text-align:center;margin-bottom:5px;}
 
 button{height:38px;margin:6px;border:none;border-radius:6px;background:#222;color:white;cursor:pointer;padding:0 14px;}
 button:hover{background:#333;}
+button:disabled{background:#444;color:#777;cursor:not-allowed;}
 
 .infra{color:red;}
 .ultra{color:violet;}
@@ -44,7 +45,7 @@ hr{border:none;border-top:1px solid #333;margin:10px 0;}
 .logCard{background:#1c1c1c;border-radius:6px;padding:8px;margin-bottom:14px;}
 .logMeta{font-size:11px;color:#aaa;margin-bottom:6px;}
 
-/* ===== 신규 등급별 반짝 효과 ===== */
+/* ===== 신규 등급별 반짝 ===== */
 
 @keyframes glowRed{
 0%{box-shadow:0 0 0px red;}
@@ -84,8 +85,8 @@ hr{border:none;border-top:1px solid #333;margin:10px 0;}
 
 <div class="section">
 <div style="text-align:center;">
-<button onclick="pull(1)">1회</button>
-<button onclick="pull(10)">10회</button>
+<button id="btn1" onclick="pull(1)">1회</button>
+<button id="btn10" onclick="pull(10)">10회</button>
 </div>
 <div id="result"></div>
 </div>
@@ -196,23 +197,26 @@ let DB=[{name:"발렌티나",rarity:3,group:"등불사무소"},
 {name:"스테파네트",rarity:3,group:"솔레어"},
 {name:"뮌하우젠",rarity:2,group:"솔레어"}];
 
-/* ===== 상태 ===== */
 let totalCount=parseInt(localStorage.getItem("totalCount"))||0;
 let collection=JSON.parse(localStorage.getItem("collection"))||[];
 let glow=parseInt(localStorage.getItem("glow"))||0;
 let history=JSON.parse(localStorage.getItem("history"))||[];
 let sortMode="grade";
+let isRolling=false;
 
 updateUI();
 
-/* ===== 유틸 ===== */
 function sleep(ms){return new Promise(r=>setTimeout(r,ms));}
 function rollRarity(){let r=Math.random();if(r<0.03)return 3;if(r<0.23)return 2;return 1;}
 function getGradeText(r){if(r===3)return "[LUMEN(★★★)]";if(r===2)return "[ULTRA(★★)]";return "[INFRA(★)]";}
 function getClass(r){if(r===3)return "lumen";if(r===2)return "ultra";return "infra";}
 
-/* ===== 가챠 ===== */
 async function pull(times){
+if(isRolling)return;
+isRolling=true;
+document.getElementById("btn1").disabled=true;
+document.getElementById("btn10").disabled=true;
+
 let results=[];
 for(let i=0;i<times;i++){
 let rarity=rollRarity();
@@ -228,10 +232,7 @@ let resultArea=document.getElementById("result");
 resultArea.innerHTML="";
 
 for(let char of results){
-
-totalCount++;
-glow++;
-
+totalCount++;glow++;
 let isNew=!collection.includes(char.name);
 if(isNew)collection.push(char.name);
 
@@ -243,16 +244,15 @@ resultArea.appendChild(card);
 await sleep(80);
 
 if(isNew){
-
 await sleep(250);
 
-if(char.rarity===1) card.classList.add("newInfraEffect");
-else if(char.rarity===2) card.classList.add("newUltraEffect");
+if(char.rarity===1)card.classList.add("newInfraEffect");
+else if(char.rarity===2)card.classList.add("newUltraEffect");
 else card.classList.add("newLumenEffect");
 
 await sleep(500);
-
 card.classList.remove("newInfraEffect","newUltraEffect","newLumenEffect");
+await sleep(200);
 }
 }
 
@@ -261,9 +261,13 @@ localStorage.setItem("totalCount",totalCount);
 localStorage.setItem("collection",JSON.stringify(collection));
 localStorage.setItem("glow",glow);
 updateUI();
+
+isRolling=false;
+document.getElementById("btn1").disabled=false;
+document.getElementById("btn10").disabled=false;
 }
 
-/* ===== 이하 기존 기능 그대로 ===== */
+/* ===== 이하 기존 기능 ===== */
 
 function saveHistory(times,results){
 let now=new Date();
@@ -275,7 +279,6 @@ localStorage.setItem("history",JSON.stringify(history));
 
 function openLog(){document.getElementById("logModal").style.display="flex";renderLog();}
 function closeLog(){document.getElementById("logModal").style.display="none";}
-
 function renderLog(){
 if(history.length===0){document.getElementById("logList").innerHTML="기록 없음";return;}
 let html="";
@@ -291,7 +294,6 @@ document.getElementById("logList").innerHTML=html;
 
 function openGlow(){document.getElementById("glowModal").style.display="flex";renderExchange();}
 function closeGlow(){document.getElementById("glowModal").style.display="none";}
-
 function renderExchange(){
 let available=DB.filter(c=>!collection.includes(c.name)&&(c.rarity===2||c.rarity===3));
 let html="";
@@ -302,7 +304,6 @@ html+=`<div class="exchangeRow ${getClass(c.rarity)}"><div>${getGradeText(c.rari
 }
 document.getElementById("exchangeList").innerHTML=html||"교환 가능한 캐릭터 없음";
 }
-
 function exchange(name,cost){
 if(glow<cost)return;
 if(confirm(name+"을(를) 잔광 "+cost+"으로 교환하시겠습니까?")){
@@ -319,10 +320,8 @@ function setSort(mode){sortMode=mode;updateUI();}
 function updateUI(){
 document.getElementById("totalCount").textContent=totalCount;
 document.getElementById("glowCount").textContent=glow;
-
 let owned=DB.filter(c=>collection.includes(c.name));
 let html="";
-
 if(sortMode==="all"){
 let sorted=[...DB].sort((a,b)=>b.rarity-a.rarity);
 for(let c of sorted){
@@ -330,17 +329,10 @@ let ownedFlag=collection.includes(c.name);
 html+=`<div class="${getClass(c.rarity)} ${ownedFlag?'':'dimmed'}">${getGradeText(c.rarity)} ${c.name} <span class="groupText">(${c.group})</span></div>`;
 }
 }else{
-owned.sort((a,b)=>{
-if(sortMode==="name")return a.name.localeCompare(b.name,"ko");
-if(sortMode==="group")return a.group.localeCompare(b.group,"ko");
-return b.rarity-a.rarity;
-});
+owned.sort((a,b)=>{if(sortMode==="name")return a.name.localeCompare(b.name,"ko");if(sortMode==="group")return a.group.localeCompare(b.group,"ko");return b.rarity-a.rarity;});
 let currentGroup="";
 for(let c of owned){
-if(sortMode==="group"&&c.group!==currentGroup){
-currentGroup=c.group;
-html+=`<hr><strong>${currentGroup}</strong><br>`;
-}
+if(sortMode==="group"&&c.group!==currentGroup){currentGroup=c.group;html+=`<hr><strong>${currentGroup}</strong><br>`;}
 html+=`<div class="${getClass(c.rarity)}">${getGradeText(c.rarity)} ${c.name} <span class="groupText">(${c.group})</span></div>`;
 }
 }
@@ -348,9 +340,19 @@ document.getElementById("collectionArea").innerHTML=html||"없음";
 }
 
 function resetData(){
-if(confirm("정말로 모든 기록을 초기화하시겠습니까?")){
-totalCount=0;collection=[];glow=0;history=[];
-localStorage.clear();
+if(confirm("정말로 모든 가챠 기록과 보유 캐릭터를 초기화하시겠습니까?")){
+
+totalCount=0;
+glow=0;
+collection=[];
+history=[];
+
+// 필요한 키만 개별적으로 초기화
+localStorage.setItem("totalCount",0);
+localStorage.setItem("glow",0);
+localStorage.setItem("collection",JSON.stringify([]));
+localStorage.setItem("history",JSON.stringify([]));
+
 document.getElementById("result").innerHTML="";
 updateUI();
 }
